[gd_scene load_steps=15 format=2]

[ext_resource path="res://addons/dialogue_example/3d/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialogue_example/3d/models/godotGirl.dae" type="PackedScene" id=2]
[ext_resource path="res://addons/dialogue_editor/DialogueDialogue3D.gd" type="Script" id=3]
[ext_resource path="res://addons/dialogue_editor/default/fonts/Pangolin-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://addons/dialogue_example/3d/models/flagRed.dae" type="PackedScene" id=5]
[ext_resource path="res://addons/dialogue_example/3d/models/flagYellow.dae" type="PackedScene" id=6]
[ext_resource path="res://addons/dialogue_example/3d/Level.gd" type="Script" id=7]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.133333, 0.823529, 0.0745098, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.0194099, 3.9239, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 2.1551, 2.03138, 2.27096 )

[sub_resource type="CapsuleShape" id=6]
radius = 2.1986
height = 0.002

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 4 )

[node name="Level" type="Spatial"]
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="."]

[node name="Background" type="MeshInstance" parent="."]
transform = Transform( 35, 0, 0, 0, 1, 0, 0, 0, 35, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Ground" type="StaticBody" parent="Background"]

[node name="CollisionShape" type="CollisionShape" parent="Background/Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.15939, 0 )
shape = SubResource( 3 )

[node name="WallXNegative" type="StaticBody" parent="Background"]

[node name="CollisionShape" type="CollisionShape" parent="Background/WallXNegative"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01813, 1.75066, 0 )
shape = SubResource( 4 )

[node name="WallXPositive" type="StaticBody" parent="Background"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Background/WallXPositive"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01813, 1.75066, 0 )
shape = SubResource( 4 )

[node name="WallZNegative" type="StaticBody" parent="Background"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Background/WallZNegative"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01813, 1.75066, 0 )
shape = SubResource( 4 )

[node name="WallZPositive" type="StaticBody" parent="Background"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Background/WallZPositive"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01813, 1.75066, 0 )
shape = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="Background"]
transform = Transform( 0.0285714, 0, 0, 0, -1.62921e-07, 1, 0, -0.0285714, -4.65488e-09, 0, 20, 0 )
light_energy = 3.0

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -21, 0, -21 )

[node name="Girl" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 21, 0, 21 )

[node name="Dialogue3D" type="Area" parent="Girl"]
transform = Transform( 1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0 )
script = ExtResource( 3 )
dialogue_name = "ade89692-0b62-47dd-bacf-2b835ca69902"
autostart = false
activate = "action"
cancel = "cancel"

[node name="CollisionShape" type="CollisionShape" parent="Girl/Dialogue3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.073782, 2.26772, 1.13945 )
shape = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="Girl/Dialogue3D"]

[node name="CollisionShape" type="CollisionShape" parent="Girl/Dialogue3D/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.27477, 0 )
shape = SubResource( 6 )

[node name="CanvasError" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasError"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 7 )
text = "To support dialogues you have to autoload res://addons/dialogue_editor/DialogueManager.gd"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagRed" parent="." instance=ExtResource( 5 )]
transform = Transform( -0.664463, -0.241845, -0.707107, -0.34202, 0.939693, 0, 0.664463, 0.241845, -0.707107, 19.7, 4, 22.3 )
visible = false

[node name="FlagYellow" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.664463, 0.241845, 0.707107, -0.34202, 0.939693, 0, -0.664463, -0.241845, 0.707107, 22.3, 4, 19.7 )
visible = false
